--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -22,13 +22,14 @@ body {
       .singleMessage {
         display: flex;
         justify-content: center;
-        background-color: red;
         border: #171717;
         border-style: solid;
         border-width: 1px;
         width: 95%;
         min-height: 2rem;
-        overflow: hidden;
+        max-height: 8rem;
+        overflow: auto;
+        margin-top: 1rem;
         span {
           color: white;
         }
@@ -80,5 +81,18 @@ button {
   position: relative;
   cursor: pointer;
   margin-bottom: 2%;
+}
 
+
+.singleMessage::-webkit-scrollbar {
+  width: 0.8em;
+}
+ 
+.singleMessage::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+.singleMessage::-webkit-scrollbar-thumb {
+  background-color: rgb(201, 160, 160);
+  outline: 1px solid rgb(0, 0, 0);
 }
