--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -11,12 +11,13 @@ body {
     flex-direction: column;
     font-family: "Lato", sans-serif;
     align-items: center;
+    background-color: #F3CFCE;
 
     .messageArea {
       display: flex;
       flex-direction: column;
       align-items: center;
-      background-color: rgb(199, 181, 181);
+      background-color: #EBE7E3;
       width: 100%;
       height: 100%;
       .singleMessage {
@@ -31,7 +32,9 @@ body {
         overflow: auto;
         margin-top: 1rem;
         span {
-          color: white;
+          color: #E69694;
+          font-size: 1.1rem;
+          font-weight: bold;
         }
       }
     }
@@ -39,8 +42,11 @@ body {
 
   .title {
     font-size: 3rem;
+    font-weight: bold;
     text-align: center;
-    margin-bottom: 2%;
+    margin-bottom: 3%;
+    margin-top: 2%;
+    color: #E69694;
   }
 
   .input {
@@ -53,7 +59,7 @@ body {
     outline: none;
     transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
     box-shadow: 0px 0px 20px -18px;
-    margin-bottom: 2%;
+    margin-bottom: 3%;
   }
 
   .input:hover {
@@ -66,7 +72,7 @@ body {
   }
 
   .input:focus {
-    border: 2px solid grey;
+    border: 2px solid #E69694;
   }
 }
 
@@ -74,13 +80,13 @@ button {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   color: white;
-  background-color: #171717;
+  background-color: #E69694;
   padding: 1em 2em;
   border: none;
   border-radius: 0.6rem;
   position: relative;
   cursor: pointer;
-  margin-bottom: 2%;
+  margin-bottom: 3%;
 }
 
 
