--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -11,13 +11,13 @@ body {
     flex-direction: column;
     font-family: "Lato", sans-serif;
     align-items: center;
-    background-color: #F3CFCE;
+    background-color: #f3cfce;
 
     .messageArea {
       display: flex;
       flex-direction: column;
       align-items: center;
-      background-color: #EBE7E3;
+      background-color: #ebe7e3;
       width: 100%;
       height: 100%;
       .singleMessage {
@@ -32,7 +32,7 @@ body {
         overflow: auto;
         margin-top: 1rem;
         span {
-          color: #E69694;
+          color: #e69694;
           font-size: 1.1rem;
           font-weight: bold;
         }
@@ -46,7 +46,7 @@ body {
     text-align: center;
     margin-bottom: 3%;
     margin-top: 2%;
-    color: #E69694;
+    color: #e69694;
   }
 
   .input {
@@ -72,7 +72,7 @@ body {
   }
 
   .input:focus {
-    border: 2px solid #E69694;
+    border: 2px solid #e69694;
   }
 }
 
@@ -80,7 +80,7 @@ button {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   color: white;
-  background-color: #E69694;
+  background-color: #e69694;
   padding: 1em 2em;
   border: none;
   border-radius: 0.6rem;
@@ -88,17 +88,46 @@ button {
   cursor: pointer;
   margin-bottom: 3%;
 }
+//ativar este apenas no pc depois
+.bodyArea::-webkit-scrollbar { 
+  width: 0em;
+}
 
+// .bodyArea::-webkit-scrollbar-track {
+//   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+// }
+
+// .bodyArea::-webkit-scrollbar-thumb {
+//   background-color: rgb(201, 160, 160);
+//   outline: 1px solid rgb(0, 0, 0);
+// }
 
 .singleMessage::-webkit-scrollbar {
   width: 0.8em;
 }
- 
+
 .singleMessage::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
- 
+
 .singleMessage::-webkit-scrollbar-thumb {
   background-color: rgb(201, 160, 160);
   outline: 1px solid rgb(0, 0, 0);
+}
+
+.copyMessage {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #e69694;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-size: 1.4rem;
 }
