--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -31,6 +31,7 @@ body {
         max-height: 8rem;
         overflow: auto;
         margin-top: 1rem;
+        margin-bottom: 1rem;
         span {
           color: #e69694;
           font-size: 1.1rem;
@@ -130,4 +131,22 @@ button {
   flex-direction: column;
   text-align: center;
   font-size: 1.4rem;
+}
+
+.noMessage{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 2rem;
+  font-size: 1.5rem;
+  img {
+    width: 50%;
+  }
+  @media (min-width: 768px) {
+    img {
+      width: 10%;
+    }
+  }
 }
