style: change style in messages hover effec

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -36,6 +36,7 @@ body {
       height: auto;
       flex-wrap: wrap;
       gap: 1em;
+      border-radius: 10px;
       .singleMessage {
     box-sizing: border-box;
     display: flex;
