--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -69,6 +69,9 @@ body {
           font-weight: bold;
           padding: 0 1em;
           word-break: break-word;
+          background: white;
+          height: min-content;
+          padding-bottom: 1em;
         }
 
         .linkMessage {
@@ -77,18 +80,19 @@ body {
           padding: 0 1em;
           text-decoration: none;
           color: #e69694;
+          background: white;
         }
 
         .upperArea {
           display: flex;
-          background-color: #171717;
           width: 100%;
           height: 15%;
           min-height: 15%;
           border-radius: 15px;
-          background-color: #d1d1d1da;
+          background-color: #e69694;
           align-items: center;
           justify-content: end;
+          margin-bottom: 1em;
 
           svg {
             width: 25px;
@@ -105,8 +109,10 @@ body {
 
         .contentArea {
           display: flex;
-
           padding-top: 1em;
+          height: 100%;
+          background-color: white;
+          border-radius: 15px;
         }
       }
     }
@@ -220,6 +226,24 @@ button {
   @media (min-width: 768px) {
     img {
       width: 10%;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  body {
+    .bodyArea {
+      .messageArea {
+        .singleMessage {
+          width: 90%;
+          overflow-x: hidden;
+          .linkMessage {
+            word-wrap: break-all;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+        }
+      }
     }
   }
 }
