style: add style for textArea to mobile

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -127,7 +127,7 @@ body {
     color: #e69694;
   }
 
-  .input {
+  textArea {
     width: 100%;
     max-width: 220px;
     height: 45px;
@@ -139,6 +139,8 @@ body {
     box-shadow: 0px 0px 20px -18px;
     margin-bottom: 3%;
     box-sizing: border-box;
+    resize: none;
+    overflow: hidden;
   }
 
   // .input:hover {
@@ -233,6 +235,23 @@ button {
 @media (max-width: 768px) {
   body {
     .bodyArea {
+      .topArea {
+        textArea {
+          width: 100%;
+          max-width: 220px;
+          height: 45px;
+          padding: 12px;
+          border-radius: 12px;
+          border: 2px solid lightgrey;
+          outline: none;
+          transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+          box-shadow: 0px 0px 20px -18px;
+          margin-bottom: 3%;
+          box-sizing: border-box;
+          resize: none;
+          overflow: hidden;
+        }
+      }
       .messageArea {
         .singleMessage {
           width: 90%;
