--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -15,13 +15,20 @@ body {
     background-attachment: fixed;
     background-repeat: repeat;
     .topArea {
-      width: 100%;
+      width: 40%;
       display: flex;
       flex-direction: column;
       height: auto;
-      justify-content: center;
-      align-items: center;
       // background-color: green;
+
+      .topContent {
+        display: flex;
+        flex-direction: column;
+        background-color: rgba(255, 255, 255, 0.8);
+        padding: 1em;
+        border-radius: 10px;
+        margin-top: 1em;
+      }
     }
     height: auto;
     overflow-x: hidden;
@@ -29,7 +36,6 @@ body {
     display: flex;
     flex-direction: column;
     font-family: "Lato", sans-serif;
-    align-items: center;
     background: #ffd8e6;
     background-image: url(https://static.tumblr.com/298234d56fa96aae616886c70a2760f5/xasppo4/JgZongpkl/tumblr_static_8am6mskgbl8o0wsc8cc0gkckc.png);
     background-attachment: fixed;
@@ -144,10 +150,9 @@ body {
   .title {
     font-size: 3rem;
     font-weight: bold;
-    text-align: center;
     margin-bottom: 3%;
     margin-top: 2%;
-    color: #e69694;
+    color: #000000;
   }
 
   textArea {
@@ -192,6 +197,16 @@ button {
   position: relative;
   cursor: pointer;
   margin-bottom: 3%;
+  width: 50%;
+}
+label {
+  font-size: 1.3rem;
+}
+select {
+  width: fit-content;
+  margin-top: 1rem;
+  border-radius: 5px;
+  height: 3em;
 }
 //ativar este apenas no pc depois
 .bodyArea::-webkit-scrollbar {
@@ -258,8 +273,23 @@ button {
 @media (max-width: 768px) {
   body {
     .bodyArea {
+      display: flex;
+      align-items: center;
+      padding: 0;
       .topArea {
-        textArea {
+        width: 80%;
+        .topContent {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          background-color: rgba(255, 255, 255, 0.8);
+          padding: 1em;
+          border-radius: 10px;
+          .title{
+            text-align: center;
+          }
+        }
+        .textArea {
           width: 100%;
           max-width: 220px;
           height: 45px;
@@ -276,8 +306,10 @@ button {
         }
       }
       .messageArea {
+        min-width: 90%;
+        max-width: 90%;
         .singleMessage {
-          width: 35%;
+          width: 100%;
           overflow-x: hidden;
           .linkMessage {
             word-wrap: break-all;
