style: change some spacing in mobile

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -64,9 +64,9 @@ body {
         box-sizing: border-box;
         display: flex;
         flex-direction: column;
-        border: #171717;
+        border: #ffa5f3;
         border-style: solid;
-        border-width: 0px;
+        border-width: 1px;
         background: #e4e3e3da;
         width: 32%;
         height: 22em;
