--- a/src/pages/components/ModalCategory/ModalCategory.module.scss
+++ b/src/pages/components/ModalCategory/ModalCategory.module.scss
@@ -19,8 +19,8 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 80%;
-  max-width: 600px;
+  width: 40%;
+  max-width: 20%;
   .middleContent {
     width: 100%;
     height: 100%;
@@ -73,4 +73,11 @@
 .sendButton:hover,
 .closeButton:hover {
   background-color: #e69694;
+}
+
+@media (max-width: 768px) {
+  .modalContent {
+    width: 80%;
+    max-width: 100%;
+  }
 }
