style: add some style to make more visible

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -5,15 +5,8 @@ body {
   height: 100vh;
   overflow-y: auto;
   overflow-x: hidden;
-  background: #ffd8e6;
-  background-image: url(https://static.tumblr.com/298234d…/xasppo4/JgZongpkl/tumblr_static_8am6mskgbl8o0wsc8cc0gkckc.png);
-  background-attachment: fixed;
-  background-repeat: repeat;
+
   .bodyArea {
-    background: #ffd8e6;
-    background-image: url(https://static.tumblr.com/298234d…/xasppo4/JgZongpkl/tumblr_static_8am6mskgbl8o0wsc8cc0gkckc.png);
-    background-attachment: fixed;
-    background-repeat: repeat;
     .topArea {
       width: 40%;
       display: flex;
@@ -24,7 +17,6 @@ body {
       .topContent {
         display: flex;
         flex-direction: column;
-        background-color: rgba(255, 255, 255, 0.8);
         padding: 1em;
         border-radius: 10px;
         margin-top: 1em;
@@ -43,10 +35,7 @@ body {
     display: flex;
     flex-direction: column;
     font-family: "Lato", sans-serif;
-    background: #ffd8e6;
-    background-image: url(https://static.tumblr.com/298234d56fa96aae616886c70a2760f5/xasppo4/JgZongpkl/tumblr_static_8am6mskgbl8o0wsc8cc0gkckc.png);
-    background-attachment: fixed;
-    background-repeat: repeat;
+
     padding: 0 1em;
 
     .messageArea {
@@ -208,6 +197,7 @@ button {
 }
 label {
   font-size: 1.3rem;
+  font-weight: bold;
 }
 select {
   width: fit-content;
@@ -337,4 +327,10 @@ select {
       }
     }
   }
+}
+
+:root {
+  background-image: url(https://static.tumblr.com/298234d56fa96aae616886c70a2760f5/xasppo4/JgZongpkl/tumblr_static_8am6mskgbl8o0wsc8cc0gkckc.png);
+  background-attachment: fixed;
+  background-repeat: repeat;
 }
